little bit of progress lol

--- a/tasks.json
+++ b/tasks.json
@@ -1,1 +1,23 @@
- 
+{
+    "tasks": {
+        "completed": [],
+        "incomplete": [
+            {
+                "id": 3,
+                "description": "tesk task 1",
+                "status": "Todo",
+                "createdAt": null,
+                "updatedAt": null
+            },
+            {
+                "id": 4,
+                "description": "Accumalte a total of 20 million php asset in 10 years",
+                "status": "Todo",
+                "createdAt": null,
+                "updatedAt": null
+            }
+        ],
+        "inProgress": [],
+        "nextId": 5
+    }
+}
