--- a/tasks.json
+++ b/tasks.json
@@ -15,9 +15,52 @@
                 "status": "Todo",
                 "createdAt": null,
                 "updatedAt": null
+            },
+            {
+                "id": 5,
+                "description": "Build ironman",
+                "status": "Todo",
+                "createdAt": null,
+                "updatedAt": null
+            },
+            {
+                "id": 6,
+                "description": "Build spiderman",
+                "status": "Todo",
+                "createdAt": null,
+                "updatedAt": null
+            },
+            {
+                "id": 7,
+                "description": "Build spiderman",
+                "status": "Todo",
+                "createdAt": null,
+                "updatedAt": null
+            },
+            {
+                "id": 8,
+                "description": "Test task",
+                "status": "Todo",
+                "createdAt": null,
+                "updatedAt": null
+            },
+            {
+                "id": 9,
+                "description": "testtasksss",
+                "status": "Todo",
+                "createdAt": null,
+                "updatedAt": null
             }
         ],
-        "inProgress": [],
-        "nextId": 5
+        "inProgress": [
+            {
+                "id": "test",
+                "description": "inProgressTasksssss",
+                "status": "Todo",
+                "createdAt": null,
+                "updatedAt": null
+            }
+        ],
+        "nextId": 10
     }
 }
