--- a/tasks.json
+++ b/tasks.json
@@ -1,66 +1,32 @@
 {
     "tasks": {
-        "completed": [],
+        "completed": [
+            {
+                "id": 13,
+                "description": "testicle",
+                "status": "Todo",
+                "createdAt": "2026-02-02  22:35",
+                "updatedAt": "N/A"
+            }
+        ],
         "incomplete": [
             {
-                "id": 3,
-                "description": "tesk task 1",
+                "id": 69,
+                "description": "test",
                 "status": "Todo",
-                "createdAt": null,
-                "updatedAt": null
-            },
-            {
-                "id": 4,
-                "description": "Accumalte a total of 20 million php asset in 10 years",
-                "status": "Todo",
-                "createdAt": null,
-                "updatedAt": null
-            },
-            {
-                "id": 5,
-                "description": "Build ironman",
-                "status": "Todo",
-                "createdAt": null,
-                "updatedAt": null
-            },
-            {
-                "id": 6,
-                "description": "Build spiderman",
-                "status": "Todo",
-                "createdAt": null,
-                "updatedAt": null
-            },
-            {
-                "id": 7,
-                "description": "Build spiderman",
-                "status": "Todo",
-                "createdAt": null,
-                "updatedAt": null
-            },
-            {
-                "id": 8,
-                "description": "Test task",
-                "status": "Todo",
-                "createdAt": null,
-                "updatedAt": null
-            },
-            {
-                "id": 9,
-                "description": "testtasksss",
-                "status": "Todo",
-                "createdAt": null,
-                "updatedAt": null
+                "createdAt": "2026-02-02  22:35",
+                "updatedAt": "N/A"
             }
         ],
         "inProgress": [
             {
-                "id": "test",
-                "description": "inProgressTasksssss",
+                "id": 67,
+                "description": "pop ",
                 "status": "Todo",
-                "createdAt": null,
-                "updatedAt": null
+                "createdAt": "2026-02-02  22:35",
+                "updatedAt": "N/A"
             }
         ],
-        "nextId": 10
+        "nextId": 14
     }
 }
